--- a/css/styles.css
+++ b/css/styles.css
@@ -153,7 +153,7 @@ body {
   height: 60px;
   color: #333;
   font-size: 25px;
-  background-color: rgba(0, 0, 0, 0.06);
+  background-color: #ffffff;
   border-radius: 50%;
   display: flex;
   align-items: center;
@@ -163,7 +163,7 @@ body {
 
 .profile .social li a:hover {
   color: #272727;
-  background-color: rgba(193, 56, 242, 0.09);
+  background-color: #ffffff;
   transform: scale(1.3);
 }
 
@@ -231,7 +231,7 @@ body {
   background-color: rgba(0, 0, 0, 0.02);
   border-radius: 10px;
   display: block;
-  transition: all 0.2s ease-in-out;
+  transition: all 0.8s ease-in-out;
 }
 
 .repositories
@@ -264,6 +264,7 @@ body {
   .repository-item-container
   #repository-item-card:hover {
   transform: scale(1.05);
+  transition-duration: 0.4s;
 }
 
 .repositories
